<resources>
    <string name="app_name">CineFAPA</string>
    <string name="tela_registro">Registro</string>
    <string name="tela_login">Logar</string>
    <string name="tela_filmes_exibicao_descricao">Filmes em exibição</string>
    <string name="tela_filmes_exibicao_titulo_filme1">Coraline e o Mundo Secreto</string>
    <string name="Tela_filmes_exibicao_horario_filme1">21:00</string>
    <string name="tela_filmes_exibicao_titulo_filme2">Bob Esponja - Filme</string>
    <string name="tela_filmes_exibicao_horario_filme2">21:00</string>
    <string name="tela_filmes_exibicao_titulo_filme3">Os Simpsons - Filme</string>
    <string name="tela_filmes_exibicao_horario_filme3">21:00</string>
    <string name="tela_login_senha">Senha</string>
    <string name="tela_login_email">Email</string>
    <string name="tela_inicial_botao_logar">Logar</string>
    <string name="tela_inicial_botao_registrar">Registrar</string>
    <string name="filme1">CORALINE E O MUNDO SECRETO</string>
    <string name="filme2">BOB ESPONJA O FILME</string>
    <string name="filme3">OS SIMPSONS O FILME</string>
    <string name="comprar">COMPRAR</string>
    <string name="senha">Senha</string>
    <string name="logar">Logar</string>
</resources>